# engram

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  architecture.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: engram-building-local-ai-memory.md
engram_mcp/: config.py  logger.py  retry.py  server.py
engram_mcp/ingest/: chunker.py  embedder.py  extractor.py
engram_mcp/search/: graph.py  merger.py  vector.py
engram_mcp/tools/: graph_tools.py  manage.py  retrieve.py  store.py
scripts/: auto_store.py  benchmark.py  compact_hook.py  configure.py  engram_config.py  health_check.py  init_db.py  install.py  maintain.py  migrate.py  pre_compact.py  prompt_hook.py  session_cache.py  session_start.py  smoke_retrieve.py  start.py  stop_hook.py
tests/: test_auto_store.py  test_decay.py  test_ingest.py  test_prompt_hook.py  test_retrieve.py  test_retry.py  test_store_rollback.py
