[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-mcp"
version = "0.1.0"
description = "Local-first hybrid RAG memory backend for Claude Code (Qdrant + Neo4j + FastMCP)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "qdrant-client>=1.9",
    "neo4j>=5.19",
    "anthropic>=0.40",
    "httpx>=0.27",
    "nltk>=3.8",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["engram_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
